sample user routes fix versioning bug fix env.ID_LENG bug added more swagger responses
