# src/routes/user.js
@@ -1,0 +1,8 @@
+const { Router } = require("express");
+const { user: ctrlr } = require("../controllers");
+
+const router = Router();
+
+router.route("/").post(ctrlr.post.one);
+
+module.exports = router;
