# src/server.js
@@ -1,11 +1,18 @@
 const express = require("express");
 const routes = require("./routes");
+const cors = require("cors");
 
 const Server = async () => {
   const svr = express();
 
+  svr.use(cors());
+  svr.use(express.json());
+
   // API docs
   svr.use("/api/docs", routes.docs);
+
+  // API routes
+  svr.use("/api/user", routes.user);
 
   return svr;
 };
